// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddCenter /> should display inputs typed on the form 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AddCenter
    editCenter={[Function]}
    match={
      Object {
        "params": Object {
          "eventId": 1,
        },
      }
    }
    singleCenter={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Connect(Navbar) />,
        <div
          className="space"
        >
          <div
            className="container space"
          >
            <div
              className="row"
            >
              <SideBar />
              <div
                className="col-md-8"
                style={
                  Object {
                    "marginTop": 19,
                  }
                }
              >
                <div
                  className="container z-depth-1-half"
                >
                  <div
                    className="container adm z-depth-1-half"
                  >
                    <div
                      className="adm "
                    >
                      <br />
                      <h5
                        className="font-weight-bold white-text text-center"
                      >
                        Add Center
                      </h5>
                      <hr />
                    </div>
                  </div>
                  <AdminForm
                    capacity=""
                    description=""
                    errorStatus={false}
                    errors={Object {}}
                    handleChange={[Function]}
                    handleSubmit={[Function]}
                    handleUpload={[Function]}
                    image=""
                    imgPreviewSrc=""
                    isAvailable={false}
                    loading={false}
                    location=""
                    name=""
                    price=""
                    state=""
                    toggleAvailability={[Function]}
                  />
                </div>
              </div>
            </div>
          </div>
        </div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="container space"
          >
            <div
              className="row"
            >
              <SideBar />
              <div
                className="col-md-8"
                style={
                  Object {
                    "marginTop": 19,
                  }
                }
              >
                <div
                  className="container z-depth-1-half"
                >
                  <div
                    className="container adm z-depth-1-half"
                  >
                    <div
                      className="adm "
                    >
                      <br />
                      <h5
                        className="font-weight-bold white-text text-center"
                      >
                        Add Center
                      </h5>
                      <hr />
                    </div>
                  </div>
                  <AdminForm
                    capacity=""
                    description=""
                    errorStatus={false}
                    errors={Object {}}
                    handleChange={[Function]}
                    handleSubmit={[Function]}
                    handleUpload={[Function]}
                    image=""
                    imgPreviewSrc=""
                    isAvailable={false}
                    loading={false}
                    location=""
                    name=""
                    price=""
                    state=""
                    toggleAvailability={[Function]}
                  />
                </div>
              </div>
            </div>
          </div>,
          "className": "space",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="row"
            >
              <SideBar />
              <div
                className="col-md-8"
                style={
                  Object {
                    "marginTop": 19,
                  }
                }
              >
                <div
                  className="container z-depth-1-half"
                >
                  <div
                    className="container adm z-depth-1-half"
                  >
                    <div
                      className="adm "
                    >
                      <br />
                      <h5
                        className="font-weight-bold white-text text-center"
                      >
                        Add Center
                      </h5>
                      <hr />
                    </div>
                  </div>
                  <AdminForm
                    capacity=""
                    description=""
                    errorStatus={false}
                    errors={Object {}}
                    handleChange={[Function]}
                    handleSubmit={[Function]}
                    handleUpload={[Function]}
                    image=""
                    imgPreviewSrc=""
                    isAvailable={false}
                    loading={false}
                    location=""
                    name=""
                    price=""
                    state=""
                    toggleAvailability={[Function]}
                  />
                </div>
              </div>
            </div>,
            "className": "container space",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <SideBar />,
                <div
                  className="col-md-8"
                  style={
                    Object {
                      "marginTop": 19,
                    }
                  }
                >
                  <div
                    className="container z-depth-1-half"
                  >
                    <div
                      className="container adm z-depth-1-half"
                    >
                      <div
                        className="adm "
                      >
                        <br />
                        <h5
                          className="font-weight-bold white-text text-center"
                        >
                          Add Center
                        </h5>
                        <hr />
                      </div>
                    </div>
                    <AdminForm
                      capacity=""
                      description=""
                      errorStatus={false}
                      errors={Object {}}
                      handleChange={[Function]}
                      handleSubmit={[Function]}
                      handleUpload={[Function]}
                      image=""
                      imgPreviewSrc=""
                      isAvailable={false}
                      loading={false}
                      location=""
                      name=""
                      price=""
                      state=""
                      toggleAvailability={[Function]}
                    />
                  </div>
                </div>,
              ],
              "className": "row",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="container z-depth-1-half"
                  >
                    <div
                      className="container adm z-depth-1-half"
                    >
                      <div
                        className="adm "
                      >
                        <br />
                        <h5
                          className="font-weight-bold white-text text-center"
                        >
                          Add Center
                        </h5>
                        <hr />
                      </div>
                    </div>
                    <AdminForm
                      capacity=""
                      description=""
                      errorStatus={false}
                      errors={Object {}}
                      handleChange={[Function]}
                      handleSubmit={[Function]}
                      handleUpload={[Function]}
                      image=""
                      imgPreviewSrc=""
                      isAvailable={false}
                      loading={false}
                      location=""
                      name=""
                      price=""
                      state=""
                      toggleAvailability={[Function]}
                    />
                  </div>,
                  "className": "col-md-8",
                  "style": Object {
                    "marginTop": 19,
                  },
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <div
                        className="container adm z-depth-1-half"
                      >
                        <div
                          className="adm "
                        >
                          <br />
                          <h5
                            className="font-weight-bold white-text text-center"
                          >
                            Add Center
                          </h5>
                          <hr />
                        </div>
                      </div>,
                      <AdminForm
                        capacity=""
                        description=""
                        errorStatus={false}
                        errors={Object {}}
                        handleChange={[Function]}
                        handleSubmit={[Function]}
                        handleUpload={[Function]}
                        image=""
                        imgPreviewSrc=""
                        isAvailable={false}
                        loading={false}
                        location=""
                        name=""
                        price=""
                        state=""
                        toggleAvailability={[Function]}
                      />,
                    ],
                    "className": "container z-depth-1-half",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <div
                          className="adm "
                        >
                          <br />
                          <h5
                            className="font-weight-bold white-text text-center"
                          >
                            Add Center
                          </h5>
                          <hr />
                        </div>,
                        "className": "container adm z-depth-1-half",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": Array [
                            <br />,
                            <h5
                              className="font-weight-bold white-text text-center"
                            >
                              Add Center
                            </h5>,
                            <hr />,
                          ],
                          "className": "adm ",
                        },
                        "ref": null,
                        "rendered": Array [
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {},
                            "ref": null,
                            "rendered": null,
                            "type": "br",
                          },
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": "Add Center",
                              "className": "font-weight-bold white-text text-center",
                            },
                            "ref": null,
                            "rendered": "Add Center",
                            "type": "h5",
                          },
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {},
                            "ref": null,
                            "rendered": null,
                            "type": "hr",
                          },
                        ],
                        "type": "div",
                      },
                      "type": "div",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "capacity": "",
                        "description": "",
                        "errorMessage": undefined,
                        "errorStatus": false,
                        "errors": Object {},
                        "handleChange": [Function],
                        "handleSubmit": [Function],
                        "handleUpload": [Function],
                        "image": "",
                        "imgPreviewSrc": "",
                        "isAvailable": false,
                        "loading": false,
                        "location": "",
                        "name": "",
                        "price": "",
                        "state": "",
                        "toggleAvailability": [Function],
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                  ],
                  "type": "div",
                },
                "type": "div",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Connect(Navbar) />,
          <div
            className="space"
          >
            <div
              className="container space"
            >
              <div
                className="row"
              >
                <SideBar />
                <div
                  className="col-md-8"
                  style={
                    Object {
                      "marginTop": 19,
                    }
                  }
                >
                  <div
                    className="container z-depth-1-half"
                  >
                    <div
                      className="container adm z-depth-1-half"
                    >
                      <div
                        className="adm "
                      >
                        <br />
                        <h5
                          className="font-weight-bold white-text text-center"
                        >
                          Add Center
                        </h5>
                        <hr />
                      </div>
                    </div>
                    <AdminForm
                      capacity=""
                      description=""
                      errorStatus={false}
                      errors={Object {}}
                      handleChange={[Function]}
                      handleSubmit={[Function]}
                      handleUpload={[Function]}
                      image=""
                      imgPreviewSrc=""
                      isAvailable={false}
                      loading={false}
                      location=""
                      name=""
                      price=""
                      state=""
                      toggleAvailability={[Function]}
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="container space"
            >
              <div
                className="row"
              >
                <SideBar />
                <div
                  className="col-md-8"
                  style={
                    Object {
                      "marginTop": 19,
                    }
                  }
                >
                  <div
                    className="container z-depth-1-half"
                  >
                    <div
                      className="container adm z-depth-1-half"
                    >
                      <div
                        className="adm "
                      >
                        <br />
                        <h5
                          className="font-weight-bold white-text text-center"
                        >
                          Add Center
                        </h5>
                        <hr />
                      </div>
                    </div>
                    <AdminForm
                      capacity=""
                      description=""
                      errorStatus={false}
                      errors={Object {}}
                      handleChange={[Function]}
                      handleSubmit={[Function]}
                      handleUpload={[Function]}
                      image=""
                      imgPreviewSrc=""
                      isAvailable={false}
                      loading={false}
                      location=""
                      name=""
                      price=""
                      state=""
                      toggleAvailability={[Function]}
                    />
                  </div>
                </div>
              </div>
            </div>,
            "className": "space",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="row"
              >
                <SideBar />
                <div
                  className="col-md-8"
                  style={
                    Object {
                      "marginTop": 19,
                    }
                  }
                >
                  <div
                    className="container z-depth-1-half"
                  >
                    <div
                      className="container adm z-depth-1-half"
                    >
                      <div
                        className="adm "
                      >
                        <br />
                        <h5
                          className="font-weight-bold white-text text-center"
                        >
                          Add Center
                        </h5>
                        <hr />
                      </div>
                    </div>
                    <AdminForm
                      capacity=""
                      description=""
                      errorStatus={false}
                      errors={Object {}}
                      handleChange={[Function]}
                      handleSubmit={[Function]}
                      handleUpload={[Function]}
                      image=""
                      imgPreviewSrc=""
                      isAvailable={false}
                      loading={false}
                      location=""
                      name=""
                      price=""
                      state=""
                      toggleAvailability={[Function]}
                    />
                  </div>
                </div>
              </div>,
              "className": "container space",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <SideBar />,
                  <div
                    className="col-md-8"
                    style={
                      Object {
                        "marginTop": 19,
                      }
                    }
                  >
                    <div
                      className="container z-depth-1-half"
                    >
                      <div
                        className="container adm z-depth-1-half"
                      >
                        <div
                          className="adm "
                        >
                          <br />
                          <h5
                            className="font-weight-bold white-text text-center"
                          >
                            Add Center
                          </h5>
                          <hr />
                        </div>
                      </div>
                      <AdminForm
                        capacity=""
                        description=""
                        errorStatus={false}
                        errors={Object {}}
                        handleChange={[Function]}
                        handleSubmit={[Function]}
                        handleUpload={[Function]}
                        image=""
                        imgPreviewSrc=""
                        isAvailable={false}
                        loading={false}
                        location=""
                        name=""
                        price=""
                        state=""
                        toggleAvailability={[Function]}
                      />
                    </div>
                  </div>,
                ],
                "className": "row",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <div
                      className="container z-depth-1-half"
                    >
                      <div
                        className="container adm z-depth-1-half"
                      >
                        <div
                          className="adm "
                        >
                          <br />
                          <h5
                            className="font-weight-bold white-text text-center"
                          >
                            Add Center
                          </h5>
                          <hr />
                        </div>
                      </div>
                      <AdminForm
                        capacity=""
                        description=""
                        errorStatus={false}
                        errors={Object {}}
                        handleChange={[Function]}
                        handleSubmit={[Function]}
                        handleUpload={[Function]}
                        image=""
                        imgPreviewSrc=""
                        isAvailable={false}
                        loading={false}
                        location=""
                        name=""
                        price=""
                        state=""
                        toggleAvailability={[Function]}
                      />
                    </div>,
                    "className": "col-md-8",
                    "style": Object {
                      "marginTop": 19,
                    },
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <div
                          className="container adm z-depth-1-half"
                        >
                          <div
                            className="adm "
                          >
                            <br />
                            <h5
                              className="font-weight-bold white-text text-center"
                            >
                              Add Center
                            </h5>
                            <hr />
                          </div>
                        </div>,
                        <AdminForm
                          capacity=""
                          description=""
                          errorStatus={false}
                          errors={Object {}}
                          handleChange={[Function]}
                          handleSubmit={[Function]}
                          handleUpload={[Function]}
                          image=""
                          imgPreviewSrc=""
                          isAvailable={false}
                          loading={false}
                          location=""
                          name=""
                          price=""
                          state=""
                          toggleAvailability={[Function]}
                        />,
                      ],
                      "className": "container z-depth-1-half",
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": <div
                            className="adm "
                          >
                            <br />
                            <h5
                              className="font-weight-bold white-text text-center"
                            >
                              Add Center
                            </h5>
                            <hr />
                          </div>,
                          "className": "container adm z-depth-1-half",
                        },
                        "ref": null,
                        "rendered": Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": Array [
                              <br />,
                              <h5
                                className="font-weight-bold white-text text-center"
                              >
                                Add Center
                              </h5>,
                              <hr />,
                            ],
                            "className": "adm ",
                          },
                          "ref": null,
                          "rendered": Array [
                            Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {},
                              "ref": null,
                              "rendered": null,
                              "type": "br",
                            },
                            Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {
                                "children": "Add Center",
                                "className": "font-weight-bold white-text text-center",
                              },
                              "ref": null,
                              "rendered": "Add Center",
                              "type": "h5",
                            },
                            Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {},
                              "ref": null,
                              "rendered": null,
                              "type": "hr",
                            },
                          ],
                          "type": "div",
                        },
                        "type": "div",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "function",
                        "props": Object {
                          "capacity": "",
                          "description": "",
                          "errorMessage": undefined,
                          "errorStatus": false,
                          "errors": Object {},
                          "handleChange": [Function],
                          "handleSubmit": [Function],
                          "handleUpload": [Function],
                          "image": "",
                          "imgPreviewSrc": "",
                          "isAvailable": false,
                          "loading": false,
                          "location": "",
                          "name": "",
                          "price": "",
                          "state": "",
                          "toggleAvailability": [Function],
                        },
                        "ref": null,
                        "rendered": null,
                        "type": [Function],
                      },
                    ],
                    "type": "div",
                  },
                  "type": "div",
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<AddCenter /> should render EventDetails component correctly correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AddCenter
    editCenter={[Function]}
    getSingleCenter={
      Object {
        "center": Object {
          "capacity": "233",
          "centerId": 2,
          "description": "awesome",
          "image": "image.com",
          "isAvailable": false,
          "location": "ikeja",
          "name": "badcenter",
          "price": "4500",
          "state": "lagos",
        },
      }
    }
    match={
      Object {
        "params": Object {
          "eventId": 1,
        },
      }
    }
    singleCenter={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Connect(Navbar) />,
        <div
          className="space"
        >
          <div
            className="container space"
          >
            <div
              className="row"
            >
              <SideBar />
              <div
                className="col-md-8"
                style={
                  Object {
                    "marginTop": 19,
                  }
                }
              >
                <div
                  className="container z-depth-1-half"
                >
                  <div
                    className="container adm z-depth-1-half"
                  >
                    <div
                      className="adm "
                    >
                      <br />
                      <h5
                        className="font-weight-bold white-text text-center"
                      >
                        Add Center
                      </h5>
                      <hr />
                    </div>
                  </div>
                  <AdminForm
                    capacity=""
                    description=""
                    errorStatus={false}
                    errors={Object {}}
                    handleChange={[Function]}
                    handleSubmit={[Function]}
                    handleUpload={[Function]}
                    image=""
                    imgPreviewSrc=""
                    isAvailable={false}
                    loading={false}
                    location=""
                    name=""
                    price=""
                    state=""
                    toggleAvailability={[Function]}
                  />
                </div>
              </div>
            </div>
          </div>
        </div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="container space"
          >
            <div
              className="row"
            >
              <SideBar />
              <div
                className="col-md-8"
                style={
                  Object {
                    "marginTop": 19,
                  }
                }
              >
                <div
                  className="container z-depth-1-half"
                >
                  <div
                    className="container adm z-depth-1-half"
                  >
                    <div
                      className="adm "
                    >
                      <br />
                      <h5
                        className="font-weight-bold white-text text-center"
                      >
                        Add Center
                      </h5>
                      <hr />
                    </div>
                  </div>
                  <AdminForm
                    capacity=""
                    description=""
                    errorStatus={false}
                    errors={Object {}}
                    handleChange={[Function]}
                    handleSubmit={[Function]}
                    handleUpload={[Function]}
                    image=""
                    imgPreviewSrc=""
                    isAvailable={false}
                    loading={false}
                    location=""
                    name=""
                    price=""
                    state=""
                    toggleAvailability={[Function]}
                  />
                </div>
              </div>
            </div>
          </div>,
          "className": "space",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="row"
            >
              <SideBar />
              <div
                className="col-md-8"
                style={
                  Object {
                    "marginTop": 19,
                  }
                }
              >
                <div
                  className="container z-depth-1-half"
                >
                  <div
                    className="container adm z-depth-1-half"
                  >
                    <div
                      className="adm "
                    >
                      <br />
                      <h5
                        className="font-weight-bold white-text text-center"
                      >
                        Add Center
                      </h5>
                      <hr />
                    </div>
                  </div>
                  <AdminForm
                    capacity=""
                    description=""
                    errorStatus={false}
                    errors={Object {}}
                    handleChange={[Function]}
                    handleSubmit={[Function]}
                    handleUpload={[Function]}
                    image=""
                    imgPreviewSrc=""
                    isAvailable={false}
                    loading={false}
                    location=""
                    name=""
                    price=""
                    state=""
                    toggleAvailability={[Function]}
                  />
                </div>
              </div>
            </div>,
            "className": "container space",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <SideBar />,
                <div
                  className="col-md-8"
                  style={
                    Object {
                      "marginTop": 19,
                    }
                  }
                >
                  <div
                    className="container z-depth-1-half"
                  >
                    <div
                      className="container adm z-depth-1-half"
                    >
                      <div
                        className="adm "
                      >
                        <br />
                        <h5
                          className="font-weight-bold white-text text-center"
                        >
                          Add Center
                        </h5>
                        <hr />
                      </div>
                    </div>
                    <AdminForm
                      capacity=""
                      description=""
                      errorStatus={false}
                      errors={Object {}}
                      handleChange={[Function]}
                      handleSubmit={[Function]}
                      handleUpload={[Function]}
                      image=""
                      imgPreviewSrc=""
                      isAvailable={false}
                      loading={false}
                      location=""
                      name=""
                      price=""
                      state=""
                      toggleAvailability={[Function]}
                    />
                  </div>
                </div>,
              ],
              "className": "row",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="container z-depth-1-half"
                  >
                    <div
                      className="container adm z-depth-1-half"
                    >
                      <div
                        className="adm "
                      >
                        <br />
                        <h5
                          className="font-weight-bold white-text text-center"
                        >
                          Add Center
                        </h5>
                        <hr />
                      </div>
                    </div>
                    <AdminForm
                      capacity=""
                      description=""
                      errorStatus={false}
                      errors={Object {}}
                      handleChange={[Function]}
                      handleSubmit={[Function]}
                      handleUpload={[Function]}
                      image=""
                      imgPreviewSrc=""
                      isAvailable={false}
                      loading={false}
                      location=""
                      name=""
                      price=""
                      state=""
                      toggleAvailability={[Function]}
                    />
                  </div>,
                  "className": "col-md-8",
                  "style": Object {
                    "marginTop": 19,
                  },
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <div
                        className="container adm z-depth-1-half"
                      >
                        <div
                          className="adm "
                        >
                          <br />
                          <h5
                            className="font-weight-bold white-text text-center"
                          >
                            Add Center
                          </h5>
                          <hr />
                        </div>
                      </div>,
                      <AdminForm
                        capacity=""
                        description=""
                        errorStatus={false}
                        errors={Object {}}
                        handleChange={[Function]}
                        handleSubmit={[Function]}
                        handleUpload={[Function]}
                        image=""
                        imgPreviewSrc=""
                        isAvailable={false}
                        loading={false}
                        location=""
                        name=""
                        price=""
                        state=""
                        toggleAvailability={[Function]}
                      />,
                    ],
                    "className": "container z-depth-1-half",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <div
                          className="adm "
                        >
                          <br />
                          <h5
                            className="font-weight-bold white-text text-center"
                          >
                            Add Center
                          </h5>
                          <hr />
                        </div>,
                        "className": "container adm z-depth-1-half",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": Array [
                            <br />,
                            <h5
                              className="font-weight-bold white-text text-center"
                            >
                              Add Center
                            </h5>,
                            <hr />,
                          ],
                          "className": "adm ",
                        },
                        "ref": null,
                        "rendered": Array [
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {},
                            "ref": null,
                            "rendered": null,
                            "type": "br",
                          },
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": "Add Center",
                              "className": "font-weight-bold white-text text-center",
                            },
                            "ref": null,
                            "rendered": "Add Center",
                            "type": "h5",
                          },
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {},
                            "ref": null,
                            "rendered": null,
                            "type": "hr",
                          },
                        ],
                        "type": "div",
                      },
                      "type": "div",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "capacity": "",
                        "description": "",
                        "errorMessage": undefined,
                        "errorStatus": false,
                        "errors": Object {},
                        "handleChange": [Function],
                        "handleSubmit": [Function],
                        "handleUpload": [Function],
                        "image": "",
                        "imgPreviewSrc": "",
                        "isAvailable": false,
                        "loading": false,
                        "location": "",
                        "name": "",
                        "price": "",
                        "state": "",
                        "toggleAvailability": [Function],
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                  ],
                  "type": "div",
                },
                "type": "div",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Connect(Navbar) />,
          <div
            className="space"
          >
            <div
              className="container space"
            >
              <div
                className="row"
              >
                <SideBar />
                <div
                  className="col-md-8"
                  style={
                    Object {
                      "marginTop": 19,
                    }
                  }
                >
                  <div
                    className="container z-depth-1-half"
                  >
                    <div
                      className="container adm z-depth-1-half"
                    >
                      <div
                        className="adm "
                      >
                        <br />
                        <h5
                          className="font-weight-bold white-text text-center"
                        >
                          Add Center
                        </h5>
                        <hr />
                      </div>
                    </div>
                    <AdminForm
                      capacity=""
                      description=""
                      errorStatus={false}
                      errors={Object {}}
                      handleChange={[Function]}
                      handleSubmit={[Function]}
                      handleUpload={[Function]}
                      image=""
                      imgPreviewSrc=""
                      isAvailable={false}
                      loading={false}
                      location=""
                      name=""
                      price=""
                      state=""
                      toggleAvailability={[Function]}
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="container space"
            >
              <div
                className="row"
              >
                <SideBar />
                <div
                  className="col-md-8"
                  style={
                    Object {
                      "marginTop": 19,
                    }
                  }
                >
                  <div
                    className="container z-depth-1-half"
                  >
                    <div
                      className="container adm z-depth-1-half"
                    >
                      <div
                        className="adm "
                      >
                        <br />
                        <h5
                          className="font-weight-bold white-text text-center"
                        >
                          Add Center
                        </h5>
                        <hr />
                      </div>
                    </div>
                    <AdminForm
                      capacity=""
                      description=""
                      errorStatus={false}
                      errors={Object {}}
                      handleChange={[Function]}
                      handleSubmit={[Function]}
                      handleUpload={[Function]}
                      image=""
                      imgPreviewSrc=""
                      isAvailable={false}
                      loading={false}
                      location=""
                      name=""
                      price=""
                      state=""
                      toggleAvailability={[Function]}
                    />
                  </div>
                </div>
              </div>
            </div>,
            "className": "space",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="row"
              >
                <SideBar />
                <div
                  className="col-md-8"
                  style={
                    Object {
                      "marginTop": 19,
                    }
                  }
                >
                  <div
                    className="container z-depth-1-half"
                  >
                    <div
                      className="container adm z-depth-1-half"
                    >
                      <div
                        className="adm "
                      >
                        <br />
                        <h5
                          className="font-weight-bold white-text text-center"
                        >
                          Add Center
                        </h5>
                        <hr />
                      </div>
                    </div>
                    <AdminForm
                      capacity=""
                      description=""
                      errorStatus={false}
                      errors={Object {}}
                      handleChange={[Function]}
                      handleSubmit={[Function]}
                      handleUpload={[Function]}
                      image=""
                      imgPreviewSrc=""
                      isAvailable={false}
                      loading={false}
                      location=""
                      name=""
                      price=""
                      state=""
                      toggleAvailability={[Function]}
                    />
                  </div>
                </div>
              </div>,
              "className": "container space",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <SideBar />,
                  <div
                    className="col-md-8"
                    style={
                      Object {
                        "marginTop": 19,
                      }
                    }
                  >
                    <div
                      className="container z-depth-1-half"
                    >
                      <div
                        className="container adm z-depth-1-half"
                      >
                        <div
                          className="adm "
                        >
                          <br />
                          <h5
                            className="font-weight-bold white-text text-center"
                          >
                            Add Center
                          </h5>
                          <hr />
                        </div>
                      </div>
                      <AdminForm
                        capacity=""
                        description=""
                        errorStatus={false}
                        errors={Object {}}
                        handleChange={[Function]}
                        handleSubmit={[Function]}
                        handleUpload={[Function]}
                        image=""
                        imgPreviewSrc=""
                        isAvailable={false}
                        loading={false}
                        location=""
                        name=""
                        price=""
                        state=""
                        toggleAvailability={[Function]}
                      />
                    </div>
                  </div>,
                ],
                "className": "row",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <div
                      className="container z-depth-1-half"
                    >
                      <div
                        className="container adm z-depth-1-half"
                      >
                        <div
                          className="adm "
                        >
                          <br />
                          <h5
                            className="font-weight-bold white-text text-center"
                          >
                            Add Center
                          </h5>
                          <hr />
                        </div>
                      </div>
                      <AdminForm
                        capacity=""
                        description=""
                        errorStatus={false}
                        errors={Object {}}
                        handleChange={[Function]}
                        handleSubmit={[Function]}
                        handleUpload={[Function]}
                        image=""
                        imgPreviewSrc=""
                        isAvailable={false}
                        loading={false}
                        location=""
                        name=""
                        price=""
                        state=""
                        toggleAvailability={[Function]}
                      />
                    </div>,
                    "className": "col-md-8",
                    "style": Object {
                      "marginTop": 19,
                    },
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <div
                          className="container adm z-depth-1-half"
                        >
                          <div
                            className="adm "
                          >
                            <br />
                            <h5
                              className="font-weight-bold white-text text-center"
                            >
                              Add Center
                            </h5>
                            <hr />
                          </div>
                        </div>,
                        <AdminForm
                          capacity=""
                          description=""
                          errorStatus={false}
                          errors={Object {}}
                          handleChange={[Function]}
                          handleSubmit={[Function]}
                          handleUpload={[Function]}
                          image=""
                          imgPreviewSrc=""
                          isAvailable={false}
                          loading={false}
                          location=""
                          name=""
                          price=""
                          state=""
                          toggleAvailability={[Function]}
                        />,
                      ],
                      "className": "container z-depth-1-half",
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": <div
                            className="adm "
                          >
                            <br />
                            <h5
                              className="font-weight-bold white-text text-center"
                            >
                              Add Center
                            </h5>
                            <hr />
                          </div>,
                          "className": "container adm z-depth-1-half",
                        },
                        "ref": null,
                        "rendered": Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": Array [
                              <br />,
                              <h5
                                className="font-weight-bold white-text text-center"
                              >
                                Add Center
                              </h5>,
                              <hr />,
                            ],
                            "className": "adm ",
                          },
                          "ref": null,
                          "rendered": Array [
                            Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {},
                              "ref": null,
                              "rendered": null,
                              "type": "br",
                            },
                            Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {
                                "children": "Add Center",
                                "className": "font-weight-bold white-text text-center",
                              },
                              "ref": null,
                              "rendered": "Add Center",
                              "type": "h5",
                            },
                            Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {},
                              "ref": null,
                              "rendered": null,
                              "type": "hr",
                            },
                          ],
                          "type": "div",
                        },
                        "type": "div",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "function",
                        "props": Object {
                          "capacity": "",
                          "description": "",
                          "errorMessage": undefined,
                          "errorStatus": false,
                          "errors": Object {},
                          "handleChange": [Function],
                          "handleSubmit": [Function],
                          "handleUpload": [Function],
                          "image": "",
                          "imgPreviewSrc": "",
                          "isAvailable": false,
                          "loading": false,
                          "location": "",
                          "name": "",
                          "price": "",
                          "state": "",
                          "toggleAvailability": [Function],
                        },
                        "ref": null,
                        "rendered": null,
                        "type": [Function],
                      },
                    ],
                    "type": "div",
                  },
                  "type": "div",
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
